# CookieBlueprint

./: .pre-commit-config.yaml  Makefile  README.md  cookiecutter.json  pyproject.toml
tests/esta_python_cookiecutter/: test_cookiecutter.py
{{ cookiecutter.name }}/: Makefile  README.md  pyproject.toml
{{ cookiecutter.name }}/src/{{ cookiecutter.package_name }}/: __init__.py  main.py
{{ cookiecutter.slugname }}/: .pre-commit-config.yaml  README.md  poetry.toml  pyproject.toml
{{ cookiecutter.slugname }}/src/{{ cookiecutter.package_name }}/: __init__.py
{{ cookiecutter.slugname }}/tests/{{ cookiecutter.package_name }}/: test_greeter.py  test_main.py
